<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_selectaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:alpha="1"
        android:textAlignment="textStart"
        android:background="@color/quantum_grey"
        android:padding="10dp"
        android:text="@string/txt_manageaddress"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/service"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="Home"
            android:id="@+id/addresstitle"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"></TextView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:lines="2"
        android:id="@+id/addressdetails"
        android:singleLine="false"
        android:text="43th Street Geetha Avenue North west Lane, Chnennai-62"
        android:textColor="@color/black"
        android:textSize="12sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/txt_edit"
            android:textStyle="bold"
            android:id="@+id/btn_edit"
            android:layout_marginLeft="5dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/txt_delete"
            android:textStyle="bold"
            android:id="@+id/btn_delete"
            android:textAllCaps="true"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:id="@+id/btn_share"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"></TextView>

    </LinearLayout>

</LinearLayout>