<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/service">
                    </ImageView>

                    <EditText
                        android:layout_width="match_parent"
                        android:paddingLeft="20dp"
                        android:hint="@string/txt_hint_pickup"
                        android:layout_height="match_parent">

                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/img_2">
                    </ImageView>

                    <EditText
                        android:layout_width="match_parent"
                        android:paddingLeft="20dp"
                        android:hint="@string/txt_hint_drop"
                        android:layout_height="match_parent">

                    </EditText>

                </LinearLayout>

            </LinearLayout>
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                tools:context=".dashboaddata.SelectAddressMapsFragment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/txt_locationselect"
                    android:textAllCaps="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/quantum_grey"
                    android:textSize="12sp"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@drawable/service">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lines="2"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="12sp"></TextView>

                    <TextView
                        android:id="@+id/btn_addresschange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:alpha="1"
                        android:background="@color/row_activated"
                        android:gravity="right"
                        android:padding="10dp"
                        android:text="@string/txt_change"
                        android:textAllCaps="true"
                        android:textColor="@color/red"
                        android:textSize="12dp"
                        android:textStyle="normal" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_Continue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:alpha="1"
                android:padding="10dp"
                android:background="@color/purple_200"
                android:gravity="center"
                android:text="@string/txt_set"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/btn_selectaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:alpha="1"
                android:background="@color/quantum_grey"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/txt_seladdress"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
